--- a/dashboard.html
+++ b/dashboard.html
@@ -4,56 +4,24 @@
   <meta charset="UTF-8">
   <title>Dashboard - Navjeevan</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    .container {
-      max-width: 1000px;
-      margin: 40px auto;
-      background: #fff;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 8px 25px rgba(0,0,0,0.1);
-      overflow-x: auto;
-    }
-
-    h2 {
-      text-align: center;
-      color: #003366;
-      margin-bottom: 20px;
-    }
-
-    .loader {
-      text-align: center;
-      font-weight: bold;
-      padding: 20px;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      font-size: 14px;
-    }
-
-    table thead {
-      background-color: #003366;
-      color: white;
-    }
-
-    table th, table td {
-      padding: 12px 10px;
-      border: 1px solid #ccc;
-      text-align: left;
-      vertical-align: middle;
-      word-wrap: break-word;
-    }
-
-    table tr:nth-child(even) {
-      background-color: #f9f9f9;
-    }
-  </style>
 </head>
 <body>
+  <header>
+    <nav class="navbar">
+      <div class="logo">Navjeevan Activities</div>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="register.html">Register</a></li>
+        <li><a href="admin.html" class="admin-btn">Admin Login</a></li>
+      </ul>
+    </nav>
+  </header>
+
   <div class="container">
     <h2>📋 Registration Dashboard</h2>
+    <input type="text" id="searchInput" placeholder="Search by name, activity or email...">
+    <button onclick="exportToCSV()">Export CSV</button>
+
     <div class="loader" id="loader">Loading data...</div>
     <table id="dataTable" style="display:none;">
       <thead>
@@ -64,6 +32,7 @@
           <th>Email</th>
           <th>Activity</th>
           <th>Start Date</th>
+          <th>Days Left</th>
           <th>Fee</th>
           <th>Payment ID</th>
         </tr>
@@ -71,6 +40,10 @@
       <tbody></tbody>
     </table>
   </div>
+
+  <footer>
+    <p>&copy; 2025 Navjeevan School | Mira Road, Mumbai | Contact: 9876543210</p>
+  </footer>
 
   <script>
     const sheetURL = "https://script.google.com/macros/s/AKfycbwxjtpKyc0IreAlbd1KCopKIliy3tAbQJmYvJN8n3ceS2PYpD7pGThlM4nXAEy0oq3x/exec";
@@ -86,6 +59,13 @@
         const loader = document.getElementById("loader");
 
         data.forEach(row => {
+          const start = new Date(row.startdate);
+          const end = new Date(start);
+          end.setMonth(end.getMonth() + 3);
+          const today = new Date();
+          const timeDiff = end - today;
+          const daysLeft = timeDiff > 0 ? Math.ceil(timeDiff / (1000 * 60 * 60 * 24)) : 0;
+
           const tr = document.createElement("tr");
           tr.innerHTML = `
             <td>${row.timestamp}</td>
@@ -94,6 +74,7 @@
             <td>${row.email}</td>
             <td>${row.activity}</td>
             <td>${row.startdate}</td>
+            <td>${daysLeft} days</td>
             <td>₹${row.fee}</td>
             <td>${row.payment_id}</td>
           `;
@@ -107,6 +88,32 @@
         document.getElementById("loader").textContent = "❌ Failed to load data!";
         console.error("Fetch error:", error);
       });
+
+    function exportToCSV() {
+      const rows = document.querySelectorAll("table tr");
+      const csv = Array.from(rows).map(row => {
+        return Array.from(row.children).map(cell => `"${cell.innerText}"`).join(",");
+      }).join("\n");
+
+      const blob = new Blob([csv], { type: "text/csv" });
+      const url = window.URL.createObjectURL(blob);
+      const a = document.createElement("a");
+      a.setAttribute("hidden", "");
+      a.setAttribute("href", url);
+      a.setAttribute("download", "registrations.csv");
+      document.body.appendChild(a);
+      a.click();
+      document.body.removeChild(a);
+    }
+
+    document.getElementById("searchInput").addEventListener("input", function() {
+      const filter = this.value.toLowerCase();
+      const rows = document.querySelectorAll("#dataTable tbody tr");
+      rows.forEach(row => {
+        const text = row.innerText.toLowerCase();
+        row.style.display = text.includes(filter) ? "" : "none";
+      });
+    });
   </script>
 </body>
 </html>
