--- a/admin.html
+++ b/admin.html
@@ -6,6 +6,17 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <header>
+    <nav class="navbar">
+      <div class="logo">Navjeevan Activities</div>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="register.html">Register</a></li>
+        <li><a href="admin.html" class="admin-btn">Admin Login</a></li>
+      </ul>
+    </nav>
+  </header>
+
   <div class="container">
     <h2>Admin Login</h2>
     <form id="loginForm">
@@ -18,6 +29,10 @@
       <button type="submit">Login</button>
     </form>
   </div>
+
+  <footer>
+    <p>&copy; 2025 Navjeevan School | Mira Road, Mumbai | Contact: 9876543210</p>
+  </footer>
 
   <script>
     document.getElementById("loginForm").addEventListener("submit", function(e) {
