--- a/dashboard.html
+++ b/dashboard.html
@@ -73,7 +73,7 @@
             <td>${row.mobile}</td>
             <td>${row.email}</td>
             <td>${row.activity}</td>
-            <td>${row.startdate}</td>
+            <td>${formatDate(row.startdate)}</td>
             <td>${daysLeft} days</td>
             <td>₹${row.fee}</td>
             <td>${row.payment_id}</td>
