--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
     <div class="activity-list">
 
       <div class="activity-card">
-        <img src="football.jpg" alt="Football" />
+        <img src="football.jpeg" alt="Football" />
         <h3>Football</h3>
         <p>⚽ Mon, Wed, Thu - 7PM to 8PM</p>
       </div>
 
       <div class="activity-card">
-        <img src="cricket.jpg" alt="Cricket" />
+        <img src="cricket.jpeg" alt="Cricket" />
         <h3>Cricket</h3>
         <p>🏏 Tue & Fri 7–8:30PM<br>Sat & Sun 7–8:30AM</p>
       </div>
 
       <div class="activity-card">
-        <img src="gymnastics.jpg" alt="Gymnastics" />
+        <img src="gymnastics.jpeg" alt="Gymnastics" />
         <h3>Gymnastics</h3>
         <p>🤸‍♀️ Mon & Wed 7:30PM–8:30PM</p>
       </div>
