--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="activity-list">
 
       <div class="activity-card">
-        <img src="main/football.jpeg" alt="Football" />
+        <img src="/football.jpeg" alt="Football" />
         <h3>Football</h3>
         <p>⚽ Mon, Wed, Thu - 7PM to 8PM</p>
       </div>
