--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
     <div class="activity-list">
 
       <div class="activity-card" onclick="openModal('Football')">
-        <img src="football.jpg" alt="Football" />
+        <img src="football.jepg" alt="Football" />
         <h3>Football</h3>
         <p>⚽ Monday, Wednesday, Thursday<br>7:00 PM – 8:00 PM</p>
       </div>
 
       <div class="activity-card" onclick="openModal('Cricket')">
-        <img src="cricket.jpg" alt="Cricket" />
+        <img src="cricket.jpeg" alt="Cricket" />
         <h3>Cricket</h3>
         <p>🏏 Tue & Fri: 7–8:30 PM<br>Sat & Sun: 7–8:30 AM</p>
       </div>
 
       <div class="activity-card" onclick="openModal('Gymnastics')">
-        <img src="gymnastics.jpg" alt="Gymnastics" />
+        <img src="gymnastics.jpeg" alt="Gymnastics" />
         <h3>Gymnastics</h3>
         <p>🤸‍♀️ Monday & Wednesday<br>7:30 PM – 8:30 PM</p>
       </div>
@@ -79,7 +79,7 @@
   <script>
     const activityDescriptions = {
       Football: `
-        <img src="football.jpg" alt="Football" />
+        <img src="football.jpeg" alt="Football" />
         <p><strong>⚽ Football</strong></p>
         <ul>
           <li><strong>Days:</strong> Monday, Wednesday, Thursday</li>
@@ -91,7 +91,7 @@
         </ul>` ,
 
       Cricket: `
-        <img src="cricket.jpg" alt="Cricket" />
+        <img src="cricket.jpeg" alt="Cricket" />
         <p><strong>🏏 Cricket</strong></p>
         <ul>
           <li><strong>Days:</strong> Tue & Fri (7–8:30 PM), Sat & Sun (7–8:30 AM)</li>
@@ -102,7 +102,7 @@
         </ul>` ,
 
       Gymnastics: `
-        <img src="gymnastics.jpg" alt="Gymnastics" />
+        <img src="gymnastics.jpeg" alt="Gymnastics" />
         <p><strong>🤸‍♀️ Gymnastics</strong></p>
         <ul>
           <li><strong>Days:</strong> Monday & Wednesday</li>
