--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="activity-list">
 
       <div class="activity-card" onclick="openModal('Football')">
-        <img src="football.jepg" alt="Football" />
+        <img src="football.jpeg" alt="Football" />
         <h3>Football</h3>
         <p>⚽ Monday, Wednesday, Thursday<br>7:00 PM – 8:00 PM</p>
       </div>
